tests/stable/precondition_types/compile_fail/boolean_non_bool.stderr
error[E0308]: mismatched types
 --> $DIR/boolean_non_bool.rs:3:7
  |
3 | #[pre(14 + 20 + 8)]
  |       ^^ expected `bool`, found integer
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
